--- a/index.html
+++ b/index.html
@@ -24,43 +24,43 @@
             <button class="profile__addButton" type="button"></button>
         </section>
         <section class="elements page__elements">
-            <div class="elements_element">
-                <img class="element_image" src="./images/1.png" alt="Карачаевск">
+            <div class="elements__element">
+                <img class="element__image" src="./images/1.png" alt="Карачаевск">
                 <div class="element__bottom-field">
                     <h3 class="bottom-field__text">Карачаевск</h3>
                     <button class="bottom-field__heart" type="button"></button>
                 </div>
             </div>
-            <div class="elements_element">
-                <img class="element_image" src="./images/2.png" alt="Эльбрус">
+            <div class="elements__element">
+                <img class="element__image" src="./images/2.png" alt="Эльбрус">
                 <div class="element__bottom-field">
                     <h3 class="bottom-field__text">Гора Эльбрус</h3>
                     <button class="bottom-field__heart" type="button"></button>
                 </div>
             </div>
-            <div class="elements_element">
+            <div class="elements__element">
                 <img class="element_image" src="./images/3.png" alt="Домбай">
                 <div class="element__bottom-field">
                     <h3 class="bottom-field__text">Домбай</h3>
                     <button class="bottom-field__heart" type="button"></button>
                 </div>
             </div>
-            <div class="elements_element">
-                <img class="element_image" src="./images/4.png" alt="Эльбрус">
+            <div class="elements__element">
+                <img class="element__image" src="./images/4.png" alt="Эльбрус">
                 <div class="element__bottom-field">
                     <h3 class="bottom-field__text">Гора Эльбрус</h3>
                     <button class="bottom-field__heart" type="button"></button>
                 </div>
             </div>
-            <div class="elements_element">
-                <img class="element_image" src="./images/5.png" alt="Домбай">
+            <div class="elements__element">
+                <img class="element__image" src="./images/5.png" alt="Домбай">
                 <div class="element__bottom-field">
                     <h3 class="bottom-field__text">Домбай</h3>
                     <button class="bottom-field__heart" type="button"></button>
                 </div>
             </div>
-            <div class="elements_element">
-                <img class="element_image" src="./images/6.png" alt="Карачаево-Черкесия">
+            <div class="elements__element">
+                <img class="element__image" src="./images/6.png" alt="Карачаево-Черкесия">
                 <div class="element__bottom-field">
                     <h3 class="bottom-field__text">Карачаево-Черкесия</h3>
                     <button class="bottom-field__heart" type="button"></button>
