--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="element">
-                <img class="element_image" src="./images/3.png" alt="Домбай">
+                <img class="element__image" src="./images/3.png" alt="Домбай">
                 <div class="element__bottom-field">
                     <h3 class="element__text">Домбай</h3>
                     <button class="element__heart" type="button"></button>
