--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="profile__info">
                 <h1 class="profile__name">Василий Ермолин</h1>
                 <button class="profile__edit-button" type="button"></button>
-                <h2 class="profile__job">Interpeter, editor, frontend developer</h2>
+                <h2 class="profile__job">Interpreter, editor, frontend developer</h2>
             </div>
             <button class="profile__add-button" type="button"></button>
         </section>
