--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="profile__info">
                 <h1 class="profile__name">Василий Ермолин</h1>
                 <button class="profile__edit-button" type="button"></button>
-                <h2 class="profile__job">Interpreter, editor, frontend developer</h2>
+                <h2 class="profile__job">Interpeter, editor, frontend developer</h2>
             </div>
             <button class="profile__add-button" type="button"></button>
         </section>
@@ -61,14 +61,14 @@
     </div>
     <div class="popup popup_image">
         <div class="popup__container_image">
-            <img class="popup__image" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="">
-            <h3 class="popup__image-title">Подпись</h3>
+            <img class="popup__image">
+            <h3 class="popup__image-title"></h3>
             <button class="popup__close-button popup__close-button_image" type="button"></button>
         </div>
     </div>
     <template id="first-cards">
             <article class="element">
-                <img class="element__image" alt="card">
+                <img class="element__image">
                 <button class="element__bin" type="button"></button>
                 <div class="element__bottom-field">
                     <h2 class="element__text"></h2>
