--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="popup popup_image">
         <div class="popup__container_image">
-            <img class="popup__image">
+            <img class="popup__image" src="./images/1.jpg" alt="Владимир">
             <h3 class="popup__image-title"></h3>
             <button class="popup__close-button popup__close-button_image" type="button"></button>
         </div>
