--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 </div>
         </article>   
     </template>
+    <script src="./scipts/cards.js"></script>
     <script src="./scipts/index.js"></script>
 </body>
 </html>
