--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <input id="url-input" class="popup__input popup__input_form_url" name="place-url" type="url" placeholder="Ссылка на картинку" required>
                     <span class="url-input-error popup__input-error"></span>
                 </label>
-                <button class="popup__save-button" type="submit">Создать</button>
+                <button class="popup__save-button popup__save-button_place" type="submit">Создать</button>
             </form>
             <button class="popup__close-button popup__close-button_place" type="button"></button>
         </div>
